--- a/plot_practice.ipynb
+++ b/plot_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e57dac28-8361-4433-ae96-6f3753bfc228",
    "metadata": {},
    "outputs": [
@@ -868,7 +868,10 @@
    "id": "634118af",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#df is your dataframe\n",
+    "df[\"ColumnOne\"] = df[\"ColumnOne\"].apply(lambda x: x*x)"
+   ]
   }
  ],
  "metadata": {
